@@ -1,16 +1,11 @@
-require 'glfw'
 require 'opengl'
+require 'glfw'
+
+OpenGL.load_dll()
+GLFW.load_dll()
 
 include OpenGL
 include GLFW
-
-OpenGL.load_dll()
-case OpenGL.get_platform
-when :OPENGL_PLATFORM_WINDOWS
-  GLFW.load_dll('glfw3.dll', '.')
-when :OPENGL_PLATFORM_MACOSX
-  GLFW.load_dll('libglfw.dylib', '.')
-end
 
 if __FILE__ == $0
   glfwInit()
@@ -19,5 +14,6 @@ if __FILE__ == $0
   puts "Version: #{glGetString(GL_VERSION).to_s}"
   puts "Extensions:"
   puts glGetString(GL_EXTENSIONS).to_s.split(/ /)
+  glfwDestroyWindow( window )
   glfwTerminate()
 end
