@@ -3,20 +3,14 @@
 #
 # Ref.: /glfw-3.0.1/examples/simple.c
 #
-require 'glfw'
 require 'opengl'
-
-include GLFW
-include OpenGL
+require 'glfw'
 
 OpenGL.load_dll()
+GLFW.load_dll()
 
-case OpenGL.get_platform
-when :OPENGL_PLATFORM_WINDOWS
-  GLFW.load_dll('glfw3.dll', '.')
-when :OPENGL_PLATFORM_MACOSX
-  GLFW.load_dll('libglfw.dylib', '.')
-end
+include OpenGL
+include GLFW
 
 # Press ESC to exit.
 key_callback = GLFW::create_callback(:GLFWkeyfun) do |window_handle, key, scancode, action, mods|
